<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="about">关于</string>
    <string name="aboutgpssv">关于GPS卫星查看器</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">GPS卫星查看器</string>
    <string name="app_version">GPS卫星查看器  V2.3.0</string>
    <string name="author">作者：艾明</string>
    <string name="authoremail">联系我们：2274732921@qq.com</string>
    <string name="authorinformation">作者信息：武汉大学2011级本科生</string>
  
    <string name="backtomainpage">返回主页</string>
    
    <string name="copyright">Copyright 2013-2017 AMSunip</string>
      
    <string name="every1s">每1s刷新一次数据</string>
    <string name="every2s">每2s刷新一次数据</string>
    <string name="every3s">每3s刷新一次数据(默认)</string>
    <string name="every4s">每4s刷新一次数据</string>
    <string name="every5s">每5s刷新一次数据</string>
    
    <string name="exit">退出</string>
    
    <string name="gpssetting">GPS设置</string>
    
    <string name="hello_world">Hello world!</string>
    
    <string name="introduction">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;GPS卫星查看器--星行天宇，一手掌控。</string>
    
    <string name="myexit">退出程序</string>
    
    <string name="refreshsetting">刷新设置</string>
    
    <string name="satellitefbt">卫星分布图</string>
    <string name="satellitexht">卫星信号图</string>
    <string name="save">保存</string>
    <string name="setting">设置</string>
    <string name="suggestion">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;欢迎提出宝贵的意见或建议，您的支持是我们永远前进的动力。</string>
    
    <string name="themesetting">主题设置</string>
    <string name="theme_classical">古典怀旧</string>    
    <string name="theme_original">极致简约</string>
    <string name="thankyou">特别鸣谢：龚珣(武汉大学测绘学院)</string> 
    <string name="turnonoffgps">打开/关闭GPS</string> 
    
    <string name="updatetime">更新时间：2017年02月11日</string>
    
    <string name="versionnumber">版本信息：V2.3.0</string>
    
</resources>
