<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"> 
   <RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
   <ImageButton 
    android:id="@+id/imgbtn_comeback"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#00000000"
    android:src="@drawable/imgbtn_comeback_left"
    android:contentDescription="@null"
    android:layout_alignParentLeft="true"/>
   <TextView 
    android:id="@+id/tv_title"  
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:gravity="center_vertical"
    android:textColor="#ffffff"
    android:textSize="20sp"
    android:text="@string/aboutgpssv"/>
   </RelativeLayout> 
   <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="2dip"
    android:background="@drawable/divider_menu"/>
   <ScrollView 
    android:layout_width="match_parent"
    android:layout_height="match_parent">
   <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">      
   <ImageView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="20dip"
    android:background="#00000000"
    android:contentDescription="@null"
    android:src="@drawable/logo_about"/>
   <TextView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dip"
    android:layout_gravity="center"
    android:textColor="#ffffff"
    android:textSize="18sp"
    android:text="@string/app_version"/>  
   <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="1dip"
    android:layout_marginTop="20dip"
    android:background="#ffffff"/>    
   <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content">     
   <TextView 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dip"
    android:singleLine="false"
    android:textColor="#ffffff"
    android:textSize="18sp"
    android:text="@string/versionnumber"/>  
   </LinearLayout>  
   <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="2dip"
    android:background="@drawable/divider_menu"/>     
   <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
   <TextView 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dip"
    android:singleLine="false"
    android:textColor="#ffffff"
    android:textSize="18sp"
    android:text="@string/updatetime"/>  
   </LinearLayout> 
   <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="2dip"
    android:background="@drawable/divider_menu"/>     
   <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
   <TextView 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dip"
    android:singleLine="false"
    android:textColor="#ffffff"
    android:textSize="18sp"
    android:text="@string/author"/>  
   </LinearLayout>
   <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="2dip"
    android:background="@drawable/divider_menu"/>  
   <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
   <TextView 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dip"
    android:singleLine="false"
    android:textColor="#ffffff"
    android:textSize="18sp"
    android:text="@string/authorinformation"/>  
   </LinearLayout>
   <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="2dip"
    android:background="@drawable/divider_menu"/> 
   <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
   <TextView 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dip"
    android:singleLine="false"
    android:textColor="#ffffff"
    android:textSize="18sp"
    android:text="@string/thankyou"/>  
   </LinearLayout>
   <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="2dip"
    android:background="@drawable/divider_menu"/>    
   <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
   <TextView 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dip"
    android:singleLine="false"
    android:textColor="#ffffff"
    android:textSize="18sp"
    android:text="@string/authoremail"/>  
   </LinearLayout>
   <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="1dip"
    android:background="#ffffff"/>        
   <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
   <TextView 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dip"
    android:layout_marginRight="10dip"
    android:layout_marginTop="10dip"
    android:singleLine="false"
    android:textColor="#00ff80"
    android:textSize="18sp"
    android:text="@string/introduction"/>  
   <TextView 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"    
    android:layout_marginLeft="10dip"
    android:layout_marginRight="10dip"
    android:layout_marginBottom="10dip"
    android:singleLine="false"
    android:textColor="#00ff80"
    android:textSize="18sp"
    android:text="@string/suggestion"/>  
   </LinearLayout> 
   <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="1dip"
    android:background="#ffffff"/>     
   <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
   <TextView 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_margin="10dip"
    android:singleLine="false"
    android:textColor="#ffffff"
    android:textSize="15sp"
    android:text="@string/copyright"/>  
   </LinearLayout>  
   <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="1dip"
    android:background="#ffffff"
    android:layout_marginBottom="10dip"/>  
   </LinearLayout>               
   </ScrollView>         
</LinearLayout>