<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_setting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">   
   <RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
   <ImageButton 
    android:id="@+id/imgbtn_comeback"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#00000000"
    android:src="@drawable/imgbtn_comeback_left"
    android:contentDescription="@null"
    android:layout_alignParentLeft="true"/>
   <TextView 
    android:id="@+id/tv_title"  
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:gravity="center_vertical"
    android:textColor="#ffffff"
    android:textSize="20sp"
    android:text="@string/setting"/>
   </RelativeLayout> 
   <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="2dip"
    android:background="@drawable/divider_menu"/>
   <ScrollView 
    android:layout_width="match_parent"
    android:layout_height="match_parent">
   <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"> 
   <TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dip"
    android:textColor="#00ff80"
    android:textSize="15sp"
    android:text="@string/gpssetting"/>  
   <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="1dip"
    android:background="#ffffff"/>
   <RelativeLayout 
    android:id="@+id/layout_gps"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/style_item">  
   <TextView 
    android:id="@+id/tv_gps"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_centerVertical="true"
    android:layout_marginLeft="5dip"
    android:textColor="#ffffff"
    android:textSize="18sp"
    android:text="@string/turnonoffgps"/>       
   <ImageView 
    android:id="@+id/iv_gps"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentRight="true"
    android:layout_centerVertical="true"
    android:contentDescription="@null"
    android:background="@drawable/arrextend"/>  
   </RelativeLayout> 
   <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="1dip"
    android:background="#ffffff"/>  
   <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">  
   <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dip"
    android:textColor="#00ff80"
    android:textSize="15sp"
    android:text="@string/themesetting"/>  
   </LinearLayout>
   <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="1dip"
    android:background="#ffffffff"/>
   <RadioGroup 
    android:id="@+id/rg_themesetting"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:divider="@drawable/divider_menu"
    android:showDividers="middle"
    android:orientation="vertical"> 
   <RadioButton 
    android:id="@+id/rb_theme_original"
    android:layout_width="match_parent"
    android:layout_height="0dip"
    android:layout_weight="1"
    android:paddingTop="10dip"
    android:paddingBottom="10dip"
    android:paddingLeft="5dip"
    android:paddingRight="5dip"
    android:button="@null"
    android:drawableRight="@drawable/style_checkbox"
    android:textColor="#ffffffff"
    android:textSize="18sp"
    android:text="@string/theme_original"
    android:background="@drawable/style_item"/>
   <RadioButton 
    android:id="@+id/rb_theme_classical"  
    android:layout_width="match_parent"
    android:layout_height="0dip"
    android:paddingTop="10dip"
    android:paddingBottom="10dip"
    android:paddingLeft="5dip"
    android:paddingRight="5dip"
    android:layout_weight="1"
    android:button="@null"
    android:drawableRight="@drawable/style_checkbox"
    android:textColor="#ffffffff"
    android:textSize="18sp"
    android:text="@string/theme_classical"
    android:background="@drawable/style_item"/> 
   </RadioGroup> 
   <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="1dip"
    android:background="#ffffffff"/>  
   <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">  
   <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dip"
    android:textColor="#00ff80"
    android:textSize="15sp"
    android:text="@string/refreshsetting"/>  
   </LinearLayout>
   <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="1dip"
    android:background="#ffffff"/> 
   <RadioGroup 
    android:id="@+id/rg_frequency"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:divider="@drawable/divider_menu"
    android:showDividers="middle"
    android:orientation="vertical"> 
   <RadioButton 
    android:id="@+id/rb_every1s"
    android:layout_width="match_parent"
    android:layout_height="0dip"
    android:layout_weight="1"
    android:paddingTop="10dip"
    android:paddingBottom="10dip"
    android:paddingLeft="5dip"
    android:paddingRight="5dip"
    android:button="@null"
    android:drawableRight="@drawable/style_checkbox"
    android:textColor="#ffffff"
    android:textSize="18sp"
    android:text="@string/every1s"
    android:background="@drawable/style_item"/>
   <RadioButton 
    android:id="@+id/rb_every2s"  
    android:layout_width="match_parent"
    android:layout_height="0dip"
    android:paddingTop="10dip"
    android:paddingBottom="10dip"
    android:paddingLeft="5dip"
    android:paddingRight="5dip"
    android:layout_weight="1"
    android:button="@null"
    android:drawableRight="@drawable/style_checkbox"
    android:textColor="#ffffff"
    android:textSize="18sp"
    android:text="@string/every2s"
    android:background="@drawable/style_item"/>
   <RadioButton 
    android:id="@+id/rb_every3s"
    android:layout_width="match_parent"
    android:layout_height="0dip"
    android:paddingTop="10dip"
    android:paddingBottom="10dip"
    android:paddingLeft="5dip"
    android:paddingRight="5dip"
    android:layout_weight="1"
    android:button="@null"
    android:drawableRight="@drawable/style_checkbox"
    android:textColor="#ffffff"
    android:textSize="18sp"
    android:text="@string/every3s"
    android:background="@drawable/style_item"/>
   <RadioButton 
    android:id="@+id/rb_every4s"
    android:layout_width="match_parent"
    android:layout_height="0dip"
    android:layout_weight="1"
    android:paddingTop="10dip"
    android:paddingBottom="10dip"
    android:paddingLeft="5dip"
    android:paddingRight="5dip"
    android:button="@null"
    android:drawableRight="@drawable/style_checkbox"
    android:textColor="#ffffff"
    android:textSize="18sp"
    android:text="@string/every4s"
    android:background="@drawable/style_item"/>
   <RadioButton 
    android:id="@+id/rb_every5s"
    android:layout_width="match_parent"
    android:layout_height="0dip"
    android:paddingTop="10dip"
    android:paddingBottom="10dip"
    android:paddingLeft="5dip"
    android:paddingRight="5dip"
    android:layout_weight="1"
    android:button="@null"
    android:drawableRight="@drawable/style_checkbox"
    android:textColor="#ffffff"
    android:textSize="18sp"
    android:text="@string/every5s"
    android:background="@drawable/style_item"/>  
   </RadioGroup> 
   <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="1dip"
    android:background="#ffffff"/>  
   <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="50dip"
    android:layout_marginBottom="50dip">
   <Button
    android:id="@+id/btn_exit"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:paddingTop="8dip"
    android:paddingBottom="8dip"
    android:layout_marginLeft="20dip"
    android:layout_marginRight="20dip"
    android:background="@drawable/style_button_circle_red"
    android:textColor="#ffffff"
    android:textSize="18sp"
    android:text="@string/myexit"/> 
   <Button 
    android:id="@+id/btn_tomainpage"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:paddingTop="8dip"
    android:paddingBottom="8dip"
    android:layout_marginLeft="20dip"
    android:layout_marginRight="20dip"
    android:background="@drawable/style_button_circle_green"
    android:textColor="#ffffff"
    android:textSize="18sp"
    android:text="@string/backtomainpage"/>
   </LinearLayout>   
   </LinearLayout>
   </ScrollView>   
</LinearLayout>