<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_menu"
    android:layout_width="240dip"
    android:layout_height="match_parent"
    android:orientation="vertical">
   <TextView
    android:layout_width="240dip"
    android:layout_height="50dip"
    android:gravity="center_vertical"
    android:paddingLeft="15dip"
    android:text="@string/app_name"
    android:textColor="#ffffffff"
    android:textSize="20sp"/>
   <LinearLayout
    android:layout_width="240dip"
    android:layout_height="2dip"
    android:background="@drawable/divider_menu"/>
   <TextView
    android:id="@+id/tv_satellitefbt"
    android:layout_width="240dip"
    android:layout_height="50dip"
    android:background="@drawable/style_item"
    android:clickable="true"
    android:drawableLeft="@drawable/menu_circle"
    android:gravity="center_vertical"
    android:paddingLeft="15dip"
    android:paddingTop="10dip"
    android:paddingBottom="10dip"
    android:text="@string/satellitefbt"
    android:textColor="#ffffffff"
    android:textSize="18sp" />
   <LinearLayout
    android:layout_width="240dip"
    android:layout_height="2dip"
    android:background="@drawable/divider_menu"/>
   <TextView
    android:id="@+id/tv_satellitexht"
    android:layout_width="240dip"
    android:layout_height="50dip"
    android:background="@drawable/style_item"
    android:clickable="true"
    android:drawableLeft="@drawable/menu_rectangle"
    android:gravity="center_vertical"
    android:paddingLeft="15dip"
    android:paddingTop="10dip"
    android:paddingBottom="10dip"
    android:text="@string/satellitexht"
    android:textColor="#ffffffff"
    android:textSize="18sp"/>
   <LinearLayout
    android:layout_width="240dip"
    android:layout_height="2dip"
    android:background="@drawable/divider_menu"/>
   <TextView
    android:id="@+id/tv_setting"
    android:layout_width="240dip"
    android:layout_height="50dip"
    android:background="@drawable/style_item"
    android:clickable="true"
    android:drawableLeft="@drawable/menu_setting"   
    android:gravity="center_vertical"
    android:paddingLeft="15dip"
    android:paddingTop="10dip"
    android:paddingBottom="10dip"
    android:text="@string/setting"
    android:textColor="#ffffffff"
    android:textSize="18sp"/>
   <LinearLayout
    android:layout_width="240dip"
    android:layout_height="2dip"
    android:background="@drawable/divider_menu"/>
   <TextView
    android:id="@+id/tv_about"
    android:layout_width="240dip"
    android:layout_height="50dip"
    android:background="@drawable/style_item"
    android:clickable="true"
    android:drawableLeft="@drawable/menu_about"
    android:gravity="center_vertical"
    android:paddingLeft="15dip"
    android:paddingTop="10dip"
    android:paddingBottom="10dip"
    android:text="@string/about"
    android:textColor="#ffffffff"
    android:textSize="18sp" />
   <LinearLayout
    android:layout_width="240dip"
    android:layout_height="2dip"
    android:background="@drawable/divider_menu"/>
   <TextView
    android:id="@+id/tv_exit"
    android:layout_width="240dip"
    android:layout_height="50dip"
    android:background="@drawable/style_item"
    android:clickable="true"
    android:drawableLeft="@drawable/menu_exit"
    android:gravity="center_vertical"
    android:paddingLeft="15dip"
    android:paddingTop="10dip"
    android:paddingBottom="10dip"
    android:text="@string/exit"
    android:textColor="#ffffffff"
    android:textSize="18sp"/>
   <LinearLayout
    android:layout_width="240dip"
    android:layout_height="2dip"
    android:background="@drawable/divider_menu"/>
</LinearLayout>